--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML>
 <html>
  <head>
+    <link href="css-main.css" rel="stylesheet">
   <meta charset="utf-8">
   <title>
   Барбершоп "Бородинский"
