--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
  <head>
-  <link href="https://liptonnechai.github.io/Simpl-site-for-learning/css-main.css" rel="stylesheet">
+  <link href="css-main.css" rel="stylesheet">
   <meta charset="utf-8">
   <title>
   Барбершоп "Бородинский"
