--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <div class="main">
     <div class="container clearfix">
       <div class="logo">
-        <img src="img/logo.png" alt="Барбершоп «Бородинский»" width="368" height="204">
+        <img src="img/main-logo.png" alt="Барбершоп «Бородинский»" width="368" height="204">
       </div>
       <div class="features-row clearfix">
         <div class="feature">
@@ -42,7 +42,7 @@
           <p class="feature-item">Наши мастера - профессионалы своего дела и не могут стоить дешево. К тому же, разве цена не дает определенный статус?</p>
         </div>
       </div>
-      <div class="inex-content">
+      <div class="inex-content clearfix">
         <div class="content-column-left">
           <h2 class="content-column-title">Новости</h2>
           <ul class="news-preview">
@@ -57,14 +57,14 @@
           <h2 class="content-column-title">Фотогалерея</h2>
           <div class="gallery">
             <figure class="gallery-content">
-              <img src="img/photo-1.jpg" width="286" height="164" alt="">
+              <img src="img/holl-1.jpg" width="286" height="164" alt="">
             </figure>
             <button class="btn gallery-next">Назад</button>
             <button class="btn gallery-prev">Вперёд</button>
           </div>
         </div>
       </div>
-      <div class="inex-content">
+      <div class="inex-content clearfix">
         <div class="content-column-left">
           <div class="main-contacts">
             <h2 class="content-column-title">Контактная информация</h2>
